# Genai

./: .dockerignore  .gitignore  CNN_IMPLEMENTATION.md  Dockerfile  README.md  Yuqian Li Assignment2.md  evaluate_cifar10_models.py  example_usage.py  pyproject.toml  requirements.txt  simple_train_gan.py  test_cifar10_models.py  test_cnn_api.py  test_gan.py  train.py  train_cifar10_models.py  train_cnn.py  train_gan.py  train_llm.py
api/: main.py
app/: bigram_model.py  cnn_assignment.py  main.py
helper_lib/: README.md  __init__.py  data_loader.py  energy_model.py  evaluator.py  generator.py  llm_data_loader.py  llm_generator.py  llm_trainer.py  model.py  requirements.txt  trainer.py  utils.py
models/: gan_generator.pth
