[project]
name = "sps-genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "en-core-web-lg",
    "fastapi[standard]>=0.117.1",
    "pydantic>=2.11.9",
    "spacy>=3.8.7",
    "uvicorn[standard]>=0.36.0",
    "torch==2.1.2",
    "torchvision==0.16.2",
    "matplotlib>=3.10.6",
]

[tool.uv.sources]
en-core-web-lg = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl" }
